# data-pipelines

./: docker-compose.yaml  hello-world.ipynb  pyproject.toml
