[tool.poetry]
name = "data-pipelines"
version = "0.1.0"
description = ""
authors = ["Josh Santos <josh@omnidapps.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_pipelines"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pyspark = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
